installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager FrontprocessorUpgrade PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner NFIFlash DiseqcTester CommonInterfaceAssignment \
	CrashlogAutoSubmit CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	Fancontrol FPGAUpgrade WirelessLanSetup ManualFancontrol \
	UI3DSetup UIPositionSetup HDMICEC LEDBrightnessSetup \
	CrashReport ZappingModeSelection \
	DeviceManager WOLSetup NetDrive AnimationSetup \
	BoxModeConfig Solo4kMiscControl FastChannelChange Ultimo4kMiscControl PvrDescrambleConvert

install_PYTHON =	\
	__init__.py
